@@ -1,3 +1,9 @@
+2022-01-27  Chris Dumez  <cdumez@apple.com>
+
+        Unreviewed fix for older macOS builds after r288577.
+
+        * wtf/Assertions.h:
+
 2022-01-27  Devin Rousso  <drousso@apple.com>
 
         Change version number for HAVE_PASSKIT_DEFAULT_SHIPPING_METHOD
